DTGB-507: Fixed pagination whitespace and status messages.

--- a/components/31-molecules/pagination/_pagination.scss
+++ b/components/31-molecules/pagination/_pagination.scss
@@ -1,5 +1,4 @@
 .pager {
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -15,6 +14,7 @@
     flex-basis: 100%;
     align-items: center;
     justify-content: center;
+    margin: 0;
     list-style: none;
 
     li {
